JVM notes added